--- a/src/main/resources/structure_Gold.yml
+++ b/src/main/resources/structure_Gold.yml
@@ -1,5 +1,5 @@
 contents:
-  ==: de.darkluke1111.darkCraft.data.Structure
+  ==: de.darkluke1111.darkcraft.data.Structure
   name: Gold
   xSpan: 3
   ySpan: 1
